[tool.poetry]
name = "cloud-api"
version = "0.1.0"
description = ""
authors = ["Amine El amrani <amine_el_amrani@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
